crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_replay_history.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&replay_history_screen,\n&[STARTUP_REPLAY_HISTORY_MARKER, \"Read-only replays\",\n\"interactive and prompt runs stay available\",], &replay_history_visual,)"
---
Replay session: true
Read-only replays: true
interactive and prompt runs stay available: true
focus_marker: Replay session
focus_pixels_blake3: 61c698c2e25dfb054dea102e12cec68516073ad264ca8b1db038b6111fcebbea
focus_region_cells: row=22, col=35, height=3, width=28
image: pty_startup_replay_history.png
manifest_json: pty-manifests/startup_session_history/manifest.json
manifest_jsonl: pty-manifests/startup_session_history/manifest.jsonl
size_px: 2560x1440
