crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_six_window.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 977
expression: "checkpoint_visual_snapshot(&startup_screen, STARTUP_LIFECYCLE_MARKERS,\n&startup_visual,)"
---
startup launcher ready: true
Dispatch a new run: true
New session: true
Continue session: true
Replay session: true
focus_marker: startup launcher ready
focus_pixels_blake3: 19bbd648003ed27f34426a7830fde96efa4a214864ed6079bcb30868f1edf5d0
focus_region_cells: row=13, col=10, height=2, width=40
image: pty_startup_six_window.png
size_px: 960x540
